# learning-math

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  DISCLAIMER.md  GEMINI.md  LICENSE  LICENSE-CODE  LICENSE-DOCS  README.md  lab.py  pyproject.toml  start.bat  start.ps1  start.sh
.claude/: settings.json
.claude/commands/: column.md  concept-check.md  explain-symbol.md  math-to-python.md  teach-baby.md  visualize.md
.codex/: config.toml
.gemini/: settings.json
.jupyter/: README.md
00_notation/: 01_basic_symbols.md  02_set_theory.md  03_logic_symbols.md  04_function_notation.md  05_summation_product.md  06_greek_letters.md  README.md
01_linear_algebra/: 01_vectors.md  02_matrices.md  03_eigenvalues.md  04_decompositions.md  README.md
02_calculus/: 01_limits.md  02_derivatives.md  03_integrals.md  04_multivariable.md  05_gradient_jacobian.md  README.md
03_probability_statistics/: 01_probability_basics.md  02_distributions.md  03_expectation_variance.md  04_bayes.md  README.md
04_discrete_math/: 01_logic.md  02_proof_techniques.md  03_combinatorics.md  README.md
05_optimization/: 01_basic_concepts.md  02_gradient_descent.md  README.md
06_ml_math_bridge/: 01_loss_functions.md  02_backprop.md  README.md
07_jax/: 01_basics.md  02_autodiff.md  03_jit_vmap.md  README.md
appendix/: README.md  books.md  learning_paths.md  online.md
docs/: ai_environment_setup.md  jupyter_lab_guide.md  learning_path.md  setup.md
glossary/: README.md  jp_en_terms.md  symbol_reference.md
scripts/: generate_changelog.py
start_here/: 01_why_math.md  02_pythagoras.md  03_trigonometry.md  04_logarithm.md  README.md
(+87 files in other folders)
