[project]
name = "leaning-math"
version = "0.1.0"
description = "大学院数学基礎 学習リポジトリ (Code: MIT / Docs: CC BY-NC-SA 4.0 — see LICENSE)"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "sympy>=1.12",
    "matplotlib>=3.8",
    "japanize-matplotlib>=1.1",  # matplotlib に IPAex Gothic を自動設定 (日本語豆腐化対策)
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
